--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
 </head>
 
 <body>
+
+    <!-- HEADER----------------------------------------------------------------------- -->
     <header>
         <div class="nav-principal">
             <div class="icono">
-                <img src="097bebb5bf03c3571ac301de25816da0.jpg" alt="logo">
+                <img src="./Imagenes/097bebb5bf03c3571ac301de25816da0.jpg" alt="logo">
             </div>
             <div class="titulo">
                 <h3>¡FRESH JUICE!</h3>
@@ -26,10 +28,15 @@
                     <li><a href="#nosotros">Nosotros</a></li>
                     <li><a href="#productos">Productos</a></li>
                     <li><a href="#opiniones">Opiniones</a></li>
+                    <li><a style="color: Yellow;" href="pedidos.html">Pedidos (NEW)</a></li>
+                    <li><a style="color: green;" href="index.html">Inicio</a></li>
+
                 </ul>
             </div>
         </div>
     </header>
+    
+    <!-- MAIN------------------------------------------------ -->
 
     <main>
         <div class="contenedor">
@@ -50,7 +57,7 @@
 
         <div class="container container-principal" id="container-cards">
             <div class="card" style="width: 18rem; box-shadow: 5px 5px 5px;" id="carta">
-                <img src="6SMII7ODSRHJNKWDLGKS5PSHFI.png" class="card-img-top" alt="...">
+                <img src="./Imagenes/6SMII7ODSRHJNKWDLGKS5PSHFI.png" class="card-img-top" alt="...">
                 <div class="card-body">
                     <p class="card-text">Nuestros jugos naturales son el elixir de la frescura. Cada sorbo es un viaje
                         sensorial a la naturaleza en su máxima expresión.
@@ -59,7 +66,7 @@
             </div>
 
             <div class="card" style="width: 18rem; box-shadow: 5px 5px 5px;" id="carta">
-                <img src="3.png" class="card-img-top" alt="...">
+                <img src="./Imagenes/3.png" class="card-img-top" alt="...">
                 <div class="card-body">
                     <p class="card-text">Nuestros jugos son una deliciosa muestra de la naturaleza en su estado más
                         puro. </p>
@@ -67,7 +74,7 @@
             </div>
 
             <div class="card" style="width: 18rem; box-shadow: 5px 5px 5px;" id="carta">
-                <img src="images.png" class="card-img-top" alt="...">
+                <img src="./Imagenes/images.png" class="card-img-top" alt="...">
                 <div class="card-body">
                     <p class="card-text">Nuestros jugos naturales son una explosión de frescura y sabor auténtico. La
                         naturaleza en cada sorbo, salud y delicia garantizadas.</p>
