parte 2/segundo commit

--- a/pedidos.html
+++ b/pedidos.html
@@ -52,15 +52,10 @@
                                 <img src="./Imagenes/6SMII7ODSRHJNKWDLGKS5PSHFI.png" class="img-fluid rounded-start"
                                     alt="...">
                             </div>
-                            <div class="col-md-8">
+                            <div class="col-md-8" style="background-color: rgb(251, 245, 238);">
                                 <div class="card-body">
-                                    <h5 class="card-title">Card title</h5>
-                                    <p class="card-text">This is a wider card with supporting text below as a natural
-                                        lead-in to additional content. This content is a little bit longer.</p>
-                                </div>
-                                <div class="form-check form-switch">
-                                    <input class="form-check-input" type="checkbox" role="switch" id="poco">
-                                    <label class="form-check-label" for="flexSwitchCheckDefault"></label>
+                                    <h5 class="card-title">Combo de Jugos Tropicales</h5>
+                                    <p class="card-text">Descubre la frescura de los trópicos con nuestros jugos de piña, mango y maracuyá. Compra los tres por solo $1500 (Pesos argentinos) y ahorra un 15%.</p>
                                 </div>
                             </div>
                         </div>
@@ -72,15 +67,10 @@
                                 <img src="./Imagenes/images.png" style="background-color:white; width: 350px; "
                                     class="img-fluid rounded-start" alt="...">
                             </div>
-                            <div class="col-md-8">
+                            <div class="col-md-8" style="background-color: rgb(251, 245, 238);">
                                 <div class="card-body">
-                                    <h5 class="card-title">Card title</h5>
-                                    <p class="card-text">This is a wider card with supporting text below as a natural
-                                        lead-in to additional content. This content is a little bit longer.</p>
-                                </div>
-                                <div class="form-check form-switch">
-                                    <input class="form-check-input" type="checkbox" role="switch" id="medio">
-                                    <label class="form-check-label" for="flexSwitchCheckDefault"></label>
+                                    <h5 class="card-title">Naranja Premium</h5>
+                                    <p class="card-text">¡Refresca tu día con nuestro Jugo de Naranja Premium! Disfruta de la pureza de la fruta por solo $2000 (Pesos argentinos). ¡Compra 2 y obtén un 10% de descuento!</p>
                                 </div>
                             </div>
                         </div>
@@ -91,15 +81,10 @@
                             <div class="col-md-4">
                                 <img src="./Imagenes/3.png" class="img-fluid rounded-start" style="width: 350px;" alt="...">
                             </div>
-                            <div class="col-md-8">
+                            <div class="col-md-8" style="background-color: rgb(251, 245, 238);">
                                 <div class="card-body">
-                                    <h5 class="card-title">Card title</h5>
-                                    <p class="card-text">This is a wider card with supporting text below as a natural
-                                        lead-in to additional content. This content is a little bit longer.</p>
-                                </div>
-                                <div class="form-check form-switch">
-                                    <input class="form-check-input" type="checkbox" role="switch" id="mucho">
-                                    <label class="form-check-label" for="flexSwitchCheckDefault"></label>
+                                    <h5 class="card-title">Detox Saludable</h5>
+                                    <p class="card-text">Comienza tu día con un jugo verde detox y energizante. Por solo $2500 (Pesos argentinos) la unidad. ¡Compra 2 y obtén un 20% de descuento!.</p>
                                 </div>
                             </div>
                         </div>
@@ -117,10 +102,10 @@
                     <div class="input-group mb-3">
                         <label class="btn btn-outline-primary" for="inputGroupSelect01">OPCIONES</label>
                         <select class="form-select" id="inputGroupSelect01">
-                            <option selected>Cantidad</option>
-                            <option value="1">poco</option>
-                            <option value="2">medio</option>
-                            <option value="3">mucho</option>
+                            <option selected>Productos</option>
+                            <option value="1">Jugos Tropicales</option>
+                            <option value="2">Naranja Premium</option>
+                            <option value="3">Detox Saludable</option>
                         </select>
                     </div>
 
