--- a/pedidos.html
+++ b/pedidos.html
@@ -46,16 +46,16 @@
             <div class="row" id="columna-principal" style="height: 500px;">
                 <div class="col-9" id="columna1">
 
-                    <div class="card mb-3" style="border: 2px black solid;">
+                    <div class="card mb-3" style="border: 2px yellow solid;">
                         <div class="row g-0">
                             <div class="col-md-4">
                                 <img src="./Imagenes/6SMII7ODSRHJNKWDLGKS5PSHFI.png" class="img-fluid rounded-start"
                                     alt="...">
                             </div>
-                            <div class="col-md-8" style="background-color: rgb(251, 245, 238);">
+                            <div class="col-md-8" style="background-color: rgb(0, 0, 0);">
                                 <div class="card-body">
-                                    <h5 class="card-title">Combo de Jugos Tropicales</h5>
-                                    <p class="card-text">Descubre la frescura de los trópicos con nuestros jugos de
+                                    <h5 class="card-title" style="color: orangered;">Combo de Jugos Tropicales</h5>
+                                    <p class="card-text" style="color: white;">Descubre la frescura de los trópicos con nuestros jugos de
                                         piña, mango y maracuyá. Compra los tres por solo $2000 (Pesos argentinos) y
                                         ahorra un 15%.</p>
                                 </div>
@@ -63,16 +63,16 @@
                         </div>
                     </div>
 
-                    <div class="card mb-3" style="border:2px black solid ;">
+                    <div class="card mb-3" style="border:2px yellow solid ;">
                         <div class="row g-0">
                             <div class="col-md-4">
                                 <img src="./Imagenes/images.png" style="background-color:white; width: 350px; "
                                     class="img-fluid rounded-start" alt="...">
                             </div>
-                            <div class="col-md-8" style="background-color: rgb(251, 245, 238);">
+                            <div class="col-md-8" style="background-color: rgb(0, 0, 0);">
                                 <div class="card-body">
-                                    <h5 class="card-title">Naranja Premium</h5>
-                                    <p class="card-text">¡Refresca tu día con nuestro Jugo de Naranja Premium! Disfruta
+                                    <h5 class="card-title" style="color: orangered;">Naranja Premium</h5>
+                                    <p class="card-text"style="color: white;" >¡Refresca tu día con nuestro Jugo de Naranja Premium! Disfruta
                                         de la pureza de la fruta por solo $2000 (Pesos argentinos). ¡Compra y obtén un
                                         10% de descuento!</p>
                                 </div>
@@ -80,16 +80,16 @@
                         </div>
                     </div>
 
-                    <div class="card mb-3" style="border: 2px black solid;">
+                    <div class="card mb-3" style="border: 2px yellow solid;">
                         <div class="row g-0">
                             <div class="col-md-4">
                                 <img src="./Imagenes/3.png" class="img-fluid rounded-start" style="width: 350px;"
                                     alt="...">
                             </div>
-                            <div class="col-md-8" style="background-color: rgb(251, 245, 238);">
+                            <div class="col-md-8" style="background-color: rgb(6, 6, 6);">
                                 <div class="card-body">
-                                    <h5 class="card-title">Detox Saludable</h5>
-                                    <p class="card-text">Comienza tu día con un jugo verde detox y energizante. Por solo
+                                    <h5 class="card-title" style="color: orangered;">Detox Saludable</h5>
+                                    <p class="card-text" style="color: white;">Comienza tu día con un jugo verde detox y energizante. Por solo
                                         $2000 (Pesos argentinos) la unidad. ¡Compra y obtén un 20% de descuento!.</p>
                                 </div>
                             </div>
@@ -99,7 +99,7 @@
 
                     <h3 id="suPedido">SU PEDIDO AQUI!</h3>
 
-                    <form class="row g-1 gx-2 formulario" id="formulario">
+                    <form class="row g-1 gx-2 formulario" id="formulario" style="background-color:black;">
                         <div class="col-md-6 mb-3">
                             <input type="text" class="form-control" placeholder="Nombre">
                         </div>
@@ -132,12 +132,12 @@
                         </div>
 
                         <div class="d-grid gap-2 col-6 mx-auto">
-                            <button class="btn text-white fs-6 btnBorrar" style="background-color: #504df1;"
+                            <button class="btn text-white fs-6 btnBorrar" style="background-color: #fff700;"
                                 type=" button" id="borrar">Borrar</button>
                         </div>
 
                         <div class="d-grid gap-2 col-6 mx-auto">
-                            <button class="btn text-white fs-6 btnResumen" style="background-color: #365cf4;"
+                            <button class="btn text-white fs-6 btnResumen" style="background-color: #f9f105;"
                                 type=" button" id="resumen">Resumen</button>
                         </div>
 
